Update MAKEFILE after adding submodules
When setting up with the submodule system some paths were changed
a bit (particularly for pthreads). MAKEFILE updated to reflect the
changes.

--- a/MAKEFILE
+++ b/MAKEFILE
@@ -3,16 +3,16 @@ LINK = link
 CFLAGS = /Ox \
 /I ext\MulticoreBSP-for-C\ \
 /I ext\unistd\include \
-/I ext\pthreads-win32\prebuilt-dll-2-9-1-release\include \
+/I ext\pthreads-win32\sources\pthreads-w32-2-9-1-release \
 /D HAVE_STRUCT_TIMESPEC
 
 SOURCE_DIR = src
 OBJECT_DIR = build
 
-LIBS = ext\pthreads-win32\prebuilt-dll-2-9-1-release\lib\x64\pthreadVC2.lib
+LIBS = ext\pthreads-win32\sources\pthreads-w32-2-9-1-release\pthreadVC2.lib
 
 DLLS = bin\pthreadVC2.dll
-DLLS_SRC = ext\pthreads-win32\prebuilt-dll-2-9-1-release\dll\x64\pthreadVC2.dll
+DLLS_SRC = ext\pthreads-win32\sources\pthreads-w32-2-9-1-release\pthreadVC2.dll
 
 SOURCES = src\test_2.c ext\MulticoreBSP-for-C\mcbsp.c ext\MulticoreBSP-for-C\mcinternal.c ext\MulticoreBSP-for-C\mcutil.c
 # OBJECTS = $(SOURCES:*.c=build\*.obj)
