Fix src\source.obj source ignored warning
Incorrect use of $@ was attempting to provide the compiled objects
as input files for the compiler again. This produced a warning that
the file was being ignored for each object file. Removing $@ fixes
this.

--- a/MAKEFILE
+++ b/MAKEFILE
@@ -39,7 +39,7 @@ $(DLLS): $(DLLS_SRC)
 	copy $** $@
 
 $(OBJECTS): $(SOURCES)
-	$(CC) $(LDFLAGS) /c /Fo.\$(OBJECT_DIR)\ $@ $** $(CFLAGS)
+	$(CC) $(LDFLAGS) /c /Fo.\$(OBJECT_DIR)\ $** $(CFLAGS)
 
 clean:
 	del $(OBJECT_DIR)\*.obj bin\*.dll bin\*.exe
