--- a/MAKEFILE
+++ b/MAKEFILE
@@ -1,27 +1,21 @@
 USER_SOURCES = source.c
-EXECUTABLE = BSP.exe
+EXECUTABLE = BSP.out
 ###################################
 SOURCE_DIR = src
 OBJECT_DIR = build
 BINARY_DIR = bin
 EXTERN_DIR = ext
 ###################################
-CC = cl
-LINK = link
-CFLAGS = /Ox /c \
-/Fo.\$(OBJECT_DIR)\ \
-/I $(EXTERN_DIR)\MulticoreBSP-for-C\ \
-/I $(EXTERN_DIR)\pthreads-win32\sources\pthreads-w32-2-9-1-release
+CC = gcc
+LINK = gcc
+CFLAGS = -std=c99 -I $(EXTERN_DIR)/multicorebsp-for-c/
 
-LIBS = $(EXTERN_DIR)\pthreads-win32\sources\pthreads-w32-2-9-1-release\pthreadVC2.lib
+LIBS = -L/$(EXTERN_DIR)/multicorebsp-for-c/lib/libmcbsp1.2.0.a
 
-DLLS = $(BINARY_DIR)\pthreadVC2.dll
-DLLS_SRC = $(EXTERN_DIR)\pthreads-win32\sources\pthreads-w32-2-9-1-release\pthreadVC2.dll
+SOURCES = $(SOURCE_DIR)/$(USER_SOURCES)
+OBJECTS = $(OBJECT_DIR)/$(USER_SOURCES:.c=.o) $(EXTERN_DIR)/multicorebsp-for-c/*.o
 
-SOURCES = $(SOURCE_DIR)\$(USER_SOURCES)
-OBJECTS = $(OBJECT_DIR)\$(USER_SOURCES:.c=.obj) $(EXTERN_DIR)\multicorebsp-for-c\*.obj
-
-BINARY = $(BINARY_DIR)\$(EXECUTABLE)
+BINARY = $(BINARY_DIR)/$(EXECUTABLE)
 
 all: $(BINARY) $(DLLS) $(OBJECTS)
 
@@ -32,13 +26,11 @@ echo_sources:
 	echo $(SOURCES)
 
 $(BINARY): $(OBJECTS)
-	$(LINK) $(OBJECTS) $(LIBS) /OUT:$(BINARY)
+	$(LINK) $(OBJECTS) -lpthread -lc $(LIBS) -o $(BINARY)
 
-$(DLLS): $(DLLS_SRC)
-	copy $** $@
-
-{$(SOURCE_DIR)\}.c{$(OBJECT_DIR)\}.obj::
-	$(CC) $(CFLAGS) $<
+$(OBJECT_DIR)/%.o: $(SOURCE_DIR)/%.c
+	$(CC) $(CFLAGS) -c -o $@ $<
 
 clean:
-	del $(OBJECT_DIR)\*.obj $(BINARY_DIR)\*.dll $(BINARY_DIR)\*.exe
+	find ./$(BINARY_DIR)/ -name \*.out -type f -delete
+	find ./$(OBJECT_DIR)/ -name \*.o -type f -delete
